--- a/modules/core/client/views/home.client.view.html
+++ b/modules/core/client/views/home.client.view.html
@@ -1,28 +1,100 @@
 <section ng-controller="HomeController">
-  <div class="jumbotron text-center">
-    <div class="row">
-      <div class="col-md-6 col-md-offset-3 col-sm-6 col-sm-offset-3 col-xs-12">
-        <img alt="MEAN.JS" class="img-responsive text-center" src="modules/core/client/img/brand/logo.png" />
-      </div>
-    </div>
-    <br>
-    <div class="row">
-      <p class="lead">
-        Open-Source Full-Stack Solution For Jay's Crappy Applications
-      </p>
-    </div>
-    <div class="row">
-      <p>
-        <a class="btn btn-primary btn-lg" href="http://meanjs.org" target="_blank">Learn more</a>
-      </p>
-    </div>
-  </div>
-  <div>
-    <h2>Congrats! Jay sucks at web design, but that's okay.</h2>
-
-  </div>
-
-</section>
-<footer>
-  <br>UF Senior Project
-</footer>
+  <div class="container-fluid">
+	<div class="row">
+		<div class="col-md-12">
+			<div class="row">
+				<div class="col-md-4">
+					<div class="thumbnail">
+						<img alt="Bootstrap Thumbnail First" src="http://lorempixel.com/output/people-q-c-600-200-1.jpg" />
+						<div class="caption">
+							<h3>
+								FLT PLAN
+							</h3>
+							<p>
+								Enter your you place of Origin and Destination, gather all airport and weather information.
+							</p>
+							<p>
+								<a class="btn btn-primary" href="#">Action</a> <a class="btn" href="#">Action</a>
+							</p>
+						</div>
+						<grammarly>
+							<div class="_e725ae-textarea_btn _e725ae-not_focused">
+								<div class="_e725ae-transform_wrap">
+									<div class="_e725ae-status">
+									</div>
+								</div>
+							</div>
+						</grammarly>
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="thumbnail">
+						<img alt="Bootstrap Thumbnail Second" src="http://lorempixel.com/output/city-q-c-600-200-1.jpg" />
+						<div class="caption">
+							<h3>
+								LOGBOOK
+							</h3>
+							<p>
+								Log your hours, experience, and memeories. Convieniently downloadable to .xlsx format
+							</p>
+							<p>
+								<a class="btn btn-primary" href="#">Action</a> <a class="btn" href="#">Action</a>
+							</p>
+						</div>
+						<grammarly>
+							<div class="_e725ae-textarea_btn _e725ae-not_focused">
+								<div class="_e725ae-transform_wrap">
+									<div class="_e725ae-status">
+									</div>
+								</div>
+							</div>
+						</grammarly>
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="thumbnail">
+						<img alt="Bootstrap Thumbnail Third" src="http://lorempixel.com/output/sports-q-c-600-200-1.jpg" />
+						<div class="caption">
+							<h3>
+							  MAPS
+							</h3>
+							<p>
+								Find where you are, where you're going, and what's on the way.
+							</p>
+							<p>
+								<a class="btn btn-primary" href="#">Action</a> <a class="btn" href="#">Action</a>
+							</p>
+						</div>
+						<grammarly>
+							<div class="_e725ae-textarea_btn _e725ae-not_focused">
+								<div class="_e725ae-transform_wrap">
+									<div class="_e725ae-status">
+									</div>
+								</div>
+							</div>
+						</grammarly>
+					</div>
+				</div>
+			</div>
+			<div class="jumbotron">
+				<h2>
+					Welcome, Aviators
+				</h2>
+				<p>
+					This is a simple app for pilots to plan flight and find other useful resources to make aviation easier for everyone.
+				</p>
+				<p>
+					<a class="btn btn-primary btn-large" href="#">Learn more</a>
+				</p>
+			</div>
+			<grammarly>
+				<div class="_e725ae-textarea_btn _e725ae-not_focused">
+					<div class="_e725ae-transform_wrap">
+						<div class="_e725ae-status">
+						</div>
+					</div>
+				</div>
+			</grammarly>
+		</div>
+	</div>
+</div>
