--- a/modules/core/client/views/home.client.view.html
+++ b/modules/core/client/views/home.client.view.html
@@ -1,11 +1,12 @@
 <section ng-controller="HomeController">
   <div class="container-fluid">
 	<div class="row">
+    <br>
 		<div class="col-md-12">
 			<div class="row">
 				<div class="col-md-4">
 					<div class="thumbnail">
-						<img alt="Bootstrap Thumbnail First" src="http://lorempixel.com/output/people-q-c-600-200-1.jpg" />
+                <span class="glyphicon glyphicon-list-alt" style="font-size:5em;" aria-hidden="true"></span>
 						<div class="caption">
 							<h3>
 								FLT PLAN
@@ -14,22 +15,20 @@
 								Enter your you place of Origin and Destination, gather all airport and weather information.
 							</p>
 							<p>
-								<a class="btn btn-primary" href="#">Action</a> <a class="btn" href="#">Action</a>
+								<a class="btn btn-primary" href="#">Plan</a>
 							</p>
 						</div>
-						<grammarly>
 							<div class="_e725ae-textarea_btn _e725ae-not_focused">
 								<div class="_e725ae-transform_wrap">
 									<div class="_e725ae-status">
 									</div>
 								</div>
 							</div>
-						</grammarly>
 					</div>
 				</div>
 				<div class="col-md-4">
 					<div class="thumbnail">
-						<img alt="Bootstrap Thumbnail Second" src="http://lorempixel.com/output/city-q-c-600-200-1.jpg" />
+            <span class="glyphicon glyphicon-book" style="font-size:5em;" aria-hidden="true"></span>
 						<div class="caption">
 							<h3>
 								LOGBOOK
@@ -38,22 +37,20 @@
 								Log your hours, experience, and memeories. Convieniently downloadable to .xlsx format
 							</p>
 							<p>
-								<a class="btn btn-primary" href="#">Action</a> <a class="btn" href="#">Action</a>
+								<a class="btn btn-primary" href="#">Log</a>
 							</p>
 						</div>
-						<grammarly>
 							<div class="_e725ae-textarea_btn _e725ae-not_focused">
 								<div class="_e725ae-transform_wrap">
 									<div class="_e725ae-status">
 									</div>
 								</div>
 							</div>
-						</grammarly>
 					</div>
 				</div>
 				<div class="col-md-4">
 					<div class="thumbnail">
-						<img alt="Bootstrap Thumbnail Third" src="http://lorempixel.com/output/sports-q-c-600-200-1.jpg" />
+            <span class="glyphicon glyphicon-map-marker" style="font-size:5em;" aria-hidden="true"></span>
 						<div class="caption">
 							<h3>
 							  MAPS
@@ -62,17 +59,15 @@
 								Find where you are, where you're going, and what's on the way.
 							</p>
 							<p>
-								<a class="btn btn-primary" href="#">Action</a> <a class="btn" href="#">Action</a>
-							</p>
+								<a class="btn btn-primary" href="#">Map</a>
+              </p>
 						</div>
-						<grammarly>
 							<div class="_e725ae-textarea_btn _e725ae-not_focused">
 								<div class="_e725ae-transform_wrap">
 									<div class="_e725ae-status">
 									</div>
 								</div>
 							</div>
-						</grammarly>
 					</div>
 				</div>
 			</div>
@@ -87,14 +82,12 @@
 					<a class="btn btn-primary btn-large" href="#">Learn more</a>
 				</p>
 			</div>
-			<grammarly>
 				<div class="_e725ae-textarea_btn _e725ae-not_focused">
 					<div class="_e725ae-transform_wrap">
 						<div class="_e725ae-status">
 						</div>
 					</div>
 				</div>
-			</grammarly>
 		</div>
 	</div>
 </div>
