--- a/modules/core/client/css/core.css
+++ b/modules/core/client/css/core.css
@@ -1,3 +1,10 @@
+body{
+        background-image: url('../img/brand/background.jpeg');
+        background-size: cover;
+    }
+#jumbo{
+  background: rgba(243, 248, 251, 0.75);
+}
 .content {
   margin-top: 50px;
 }
