--- a/modules/core/client/views/home.client.view.html
+++ b/modules/core/client/views/home.client.view.html
@@ -38,7 +38,7 @@
 				</div>
 				<div class="col-md-4">
 					<div class="thumbnail">
-            <button type="button" ui-sref="fltplan" class="btn btn-default">
+            <button type="button" ui-sref="logbook.list" class="btn btn-default">
             <span class="glyphicon glyphicon-book" style="font-size:5em;" aria-hidden="true"></span>
           </button>
 						<div class="caption">
@@ -72,9 +72,6 @@
 				</h2>
 				<p>
 					This is a simple app for pilots to plan flight and find other useful resources to make aviation easier for everyone.
-				</p>
-				<p>
-					<a class="btn btn-primary btn-large" href="#">Learn more</a>
 				</p>
 			</div>
 		</div>
