--- a/modules/core/client/css/core.css
+++ b/modules/core/client/css/core.css
@@ -1,5 +1,5 @@
 body{
-        background-image: url('../img/brand/background.jpeg');
+        background: url('../img/brand/background.jpeg') no-repeat center center fixed;
         background-size: cover;
     }
 #jumbo{
@@ -41,4 +41,12 @@ a:hover .header-profile-image {
 }
 .has-error .help-inline.error-text {
   display: inline;
+}
+.navbar-brand {
+  padding: 0px;
+}
+.navbar-brand>img {
+  height: 100%;
+  padding: 15px;
+  width: auto;
 }
