--- a/modules/logbook/client/views/edit-logbook.client.view.html
+++ b/modules/logbook/client/views/edit-logbook.client.view.html
@@ -1,28 +1,30 @@
 <section ng-controller="LogbookController" ng-init="findOne()">
   <div class="page-header">
-    <h1>Edit Logbook</h1>
+    <h1>Edit Log</h1>
   </div>
   <div class="col-md-12">
-    <form name="logbookForm" class="form-horizontal" ng-submit="update(logbookForm.$valid)" novalidate>
-      <fieldset>
-        <div class="form-group" show-errors>
-          <label for="title">Title</label>
-          <input name="title" type="text" ng-model="logbook.title" id="title" class="form-control" placeholder="Title" required>
-          <div ng-messages="logbookForm.title.$error" role="alert">
-            <p class="help-block error-text" ng-message="required">Logbook title is required.</p>
+    <div class="jumbotron" id="jumbo">
+      <form name="logbookForm" class="form-horizontal" ng-submit="update(logbookForm.$valid)" novalidate>
+        <fieldset>
+          <div class="form-group" show-errors>
+            <label for="title">Title</label>
+            <input name="title" type="text" ng-model="logbook.title" id="title" class="form-control" placeholder="Title" required>
+            <div ng-messages="logbookForm.title.$error" role="alert">
+              <p class="help-block error-text" ng-message="required">Logbook title is required.</p>
+            </div>
           </div>
-        </div>
-        <div class="form-group">
-          <label for="content">Content</label>
-          <textarea name="content" ng-model="logbook.content" id="content" class="form-control" cols="30" rows="10" placeholder="Content"></textarea>
-        </div>
-        <div class="form-group">
-          <input type="submit" value="Update" class="btn btn-default">
-        </div>
-        <div ng-show="error" class="text-danger">
-          <strong ng-bind="error"></strong>
-        </div>
-      </fieldset>
-    </form>
+          <div class="form-group">
+            <label for="content">Content</label>
+            <textarea name="content" ng-model="logbook.content" id="content" class="form-control" cols="30" rows="10" placeholder="Content"></textarea>
+          </div>
+          <div class="form-group">
+            <input type="submit" value="Update" class="btn btn-default">
+          </div>
+          <div ng-show="error" class="text-danger">
+            <strong ng-bind="error"></strong>
+          </div>
+        </fieldset>
+      </form>
+    </div>
   </div>
 </section>
